# SusanoDiscordBot

./: .gitignore  Dockerfile  application.yml  config.py  docker-compose.yml  main.py  pyproject.toml
.github/worflows/: deploy.yml
.github/workflows/: main.yml
src/: config.py  main.py
src/checks/: VoiceChannelChecks.py  voice_channel_check.py
src/cogs/: music.py
src/exceptions/: Generic.py  PlayerExceptions.py  QueueException.py  TrackPlayerExceptions.py  player_exceptions.py  voice_channel_exceptions.py
src/music_ui/player/: player_view.py
src/music_ui/player/items/buttons/: back.py  loop.py  queue.py  reset.py  resume_pause.py  skip.py
src/music_ui/queue/: queue_view.py
src/music_ui/queue/items/buttons/: directions.py
src/music_ui/track_select/: track_select_view.py
src/music_ui/track_select/items/dropdowns/: tracks.py
src/tests/: test_voice_player.py
src/ui/: PlayerUI.py  QueueUI.py  SelectUI.py
src/ui/player/: player.py
src/ui/player/items/buttons/: back.py  loop.py  queue.py  reset.py  resume_pause.py  skip.py
src/ui/queue/: queue.py
src/ui/select/: select.py
src/ui/select/items/dropdowns/: tracks.py
src/utils/: embed.py  utils.py
src/voice/: VoiceGuild.py  guild_voice_state.py
src/voice/guild_data/: GuildMusicData.py  guild_data.py
src/voice/voice_state/: VoicePlayer.py  voice_player.py
