[tool.poetry]
name = "susanomusicbot"
version = "1.2.0"
description = ""
authors = ["alessandrogia <alexgiacento@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
wavelink = "^3.4.0"
python-dotenv = "^1.0.1"
pynacl = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
